--- a/Organick.html
+++ b/Organick.html
@@ -147,7 +147,155 @@
 
         <section class="page-3">
             <div class="page-3-body">
-
+                <span class="page-3-italic-green">Categories </span>
+                <h1 class="page-3-h1-blue">Our Products</h1>
+                <div class="page-3-container">
+                    <div class="page-3-box">
+                        <span class="page-3-product-type">Vegetable</span>
+                        <img src="img/main/page-3-1.png" alt="" class="page-3-box-img">
+                        <div class="page-3-product-text-box">
+                            <p class="page-3-blue-p">Calabrese Broccoli</p>
+                            <div class="page-3-vertical-hr"></div>
+                            <div class="page-3-rate-box">
+                                <div class="page-3-price-box"><span class="discount">$20.00 <div class="line"></div></span>$13.00</div>
+                                <div class="start-box">
+                                    <div class="page-3-star"></div>
+                                    <div class="page-3-star"></div>
+                                    <div class="page-3-star"></div>
+                                    <div class="page-3-star"></div>
+                                    <div class="page-3-star"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="page-3-box">
+                        <span class="page-3-product-type">Fresh</span>
+                        <img src="img/main/page-3-2.png" alt="" class="page-3-box-img">
+                        <div class="page-3-product-text-box">
+                            <p class="page-3-blue-p">Fresh Banana Fruites</p>
+                            <div class="page-3-vertical-hr"></div>
+                            <div class="page-3-rate-box">
+                                <div class="page-3-price-box"><span class="discount">$20.00 <div class="line"></div></span>$14.00</div>
+                                <div class="start-box">
+                                    <div class="page-3-star"></div>
+                                    <div class="page-3-star"></div>
+                                    <div class="page-3-star"></div>
+                                    <div class="page-3-star"></div>
+                                    <div class="page-3-star"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="page-3-box">
+                        <span class="page-3-product-type">Millets</span>
+                        <img src="img/main/page-3-3.png" alt="" class="page-3-box-img">
+                        <div class="page-3-product-text-box">
+                            <p class="page-3-blue-p">White Nuts</p>
+                            <div class="page-3-vertical-hr"></div>
+                            <div class="page-3-rate-box">
+                                <div class="page-3-price-box"><span class="discount">$20.00 <div class="line"></div></span>$15.00</div>
+                                <div class="start-box">
+                                    <div class="page-3-star"></div>
+                                    <div class="page-3-star"></div>
+                                    <div class="page-3-star"></div>
+                                    <div class="page-3-star"></div>
+                                    <div class="page-3-star"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="page-3-box">
+                        <span class="page-3-product-type">Vegetable</span>
+                        <img src="img/main/page-3-4.png" alt="" class="page-3-box-img">
+                        <div class="page-3-product-text-box">
+                            <p class="page-3-blue-p">Vegan Red Tomato</p>
+                            <div class="page-3-vertical-hr"></div>
+                            <div class="page-3-rate-box">
+                                <div class="page-3-price-box"><span class="discount">$20.00 <div class="line"></div></span>$17.00</div>
+                                <div class="start-box">
+                                    <div class="page-3-star"></div>
+                                    <div class="page-3-star"></div>
+                                    <div class="page-3-star"></div>
+                                    <div class="page-3-star"></div>
+                                    <div class="page-3-star"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="page-3-box">
+                        <span class="page-3-product-type">Health</span>
+                        <img src="img/main/page-3-5.png" alt="" class="page-3-box-img">
+                        <div class="page-3-product-text-box">
+                            <p class="page-3-blue-p">Mung Bean</p>
+                            <div class="page-3-vertical-hr"></div>
+                            <div class="page-3-rate-box">
+                                <div class="page-3-price-box"><span class="discount">$20.00 <div class="line"></div></span>$11.00</div>
+                                <div class="start-box">
+                                    <div class="page-3-star"></div>
+                                    <div class="page-3-star"></div>
+                                    <div class="page-3-star"></div>
+                                    <div class="page-3-star"></div>
+                                    <div class="page-3-star"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="page-3-box">
+                        <span class="page-3-product-type">Nuts</span>
+                        <img src="img/main/page-3-6.png" alt="" class="page-3-box-img">
+                        <div class="page-3-product-text-box">
+                            <p class="page-3-blue-p">Brown Hazelnut</p>
+                            <div class="page-3-vertical-hr"></div>
+                            <div class="page-3-rate-box">
+                                <div class="page-3-price-box"><span class="discount">$20.00 <div class="line"></div></span>$12.00</div>
+                                <div class="start-box">
+                                    <div class="page-3-star"></div>
+                                    <div class="page-3-star"></div>
+                                    <div class="page-3-star"></div>
+                                    <div class="page-3-star"></div>
+                                    <div class="page-3-star"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="page-3-box">
+                        <span class="page-3-product-type">Fresh</span>
+                        <img src="img/main/page-3-7.png" alt="" class="page-3-box-img">
+                        <div class="page-3-product-text-box">
+                            <p class="page-3-blue-p">Eggs</p>
+                            <div class="page-3-vertical-hr"></div>
+                            <div class="page-3-rate-box">
+                                <div class="page-3-price-box"><span class="discount">$20.00 <div class="line"></div></span>$17.00</div>
+                                <div class="start-box">
+                                    <div class="page-3-star"></div>
+                                    <div class="page-3-star"></div>
+                                    <div class="page-3-star"></div>
+                                    <div class="page-3-star"></div>
+                                    <div class="page-3-star"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="page-3-box">
+                        <span class="page-3-product-type">Fresh</span>
+                        <img src="img/main/page-3-8.png" alt="" class="page-3-box-img">
+                        <div class="page-3-product-text-box">
+                            <p class="page-3-blue-p">Zelco Suji Elaichi Rusk</p>
+                            <div class="page-3-vertical-hr"></div>
+                            <div class="page-3-rate-box">
+                                <div class="page-3-price-box"><span class="discount">$20.00 <div class="line"></div></span>$15.00</div>
+                                <div class="start-box">
+                                    <div class="page-3-star"></div>
+                                    <div class="page-3-star"></div>
+                                    <div class="page-3-star"></div>
+                                    <div class="page-3-star"></div>
+                                    <div class="page-3-star"></div>
+                                </div>
+                            </div>
+                        </div>    
+                    </div>
+                </div>
+                <button type="button" class="page-3-learn-more">Load More <img src="img/main/aerrow.png" alt=""></button>
             </div>
         </section>
 
