--- a/Organick.html
+++ b/Organick.html
@@ -147,23 +147,27 @@
 
         <section class="page-3">
             <div class="page-3-body">
-                <span class="page-3-italic-green">Categories </span>
-                <h1 class="page-3-h1-blue">Our Products</h1>
+                <div class="page-3-head-text">
+                    <span class="page-3-italic-green">Categories </span>
+                    <h1 class="page-3-h1-blue">Our Products</h1>
+                </div>
                 <div class="page-3-container">
                     <div class="page-3-box">
                         <span class="page-3-product-type">Vegetable</span>
                         <img src="img/main/page-3-1.png" alt="" class="page-3-box-img">
                         <div class="page-3-product-text-box">
                             <p class="page-3-blue-p">Calabrese Broccoli</p>
-                            <div class="page-3-vertical-hr"></div>
+                            <div class="page-3-hr"></div>
                             <div class="page-3-rate-box">
-                                <div class="page-3-price-box"><span class="discount">$20.00 <div class="line"></div></span>$13.00</div>
-                                <div class="start-box">
-                                    <div class="page-3-star"></div>
-                                    <div class="page-3-star"></div>
-                                    <div class="page-3-star"></div>
-                                    <div class="page-3-star"></div>
-                                    <div class="page-3-star"></div>
+                                <div class="page-3-price-box">
+                                    <span class="discount">$20.00 <div class="line"></div></span>$13.00
+                                </div>
+                                <div class="star-box">
+                                    <div class="page-3-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                                    <div class="page-3-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                                    <div class="page-3-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                                    <div class="page-3-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                                    <div class="page-3-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
                                 </div>
                             </div>
                         </div>
@@ -173,15 +177,17 @@
                         <img src="img/main/page-3-2.png" alt="" class="page-3-box-img">
                         <div class="page-3-product-text-box">
                             <p class="page-3-blue-p">Fresh Banana Fruites</p>
-                            <div class="page-3-vertical-hr"></div>
+                            <div class="page-3-hr"></div>
                             <div class="page-3-rate-box">
-                                <div class="page-3-price-box"><span class="discount">$20.00 <div class="line"></div></span>$14.00</div>
-                                <div class="start-box">
-                                    <div class="page-3-star"></div>
-                                    <div class="page-3-star"></div>
-                                    <div class="page-3-star"></div>
-                                    <div class="page-3-star"></div>
-                                    <div class="page-3-star"></div>
+                                <div class="page-3-price-box">
+                                    <span class="discount">$20.00 <div class="line"></div></span>$14.00
+                                </div>
+                                <div class="star-box">
+                                    <div class="page-3-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                                    <div class="page-3-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                                    <div class="page-3-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                                    <div class="page-3-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                                    <div class="page-3-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
                                 </div>
                             </div>
                         </div>
@@ -191,15 +197,17 @@
                         <img src="img/main/page-3-3.png" alt="" class="page-3-box-img">
                         <div class="page-3-product-text-box">
                             <p class="page-3-blue-p">White Nuts</p>
-                            <div class="page-3-vertical-hr"></div>
+                            <div class="page-3-hr"></div>
                             <div class="page-3-rate-box">
-                                <div class="page-3-price-box"><span class="discount">$20.00 <div class="line"></div></span>$15.00</div>
-                                <div class="start-box">
-                                    <div class="page-3-star"></div>
-                                    <div class="page-3-star"></div>
-                                    <div class="page-3-star"></div>
-                                    <div class="page-3-star"></div>
-                                    <div class="page-3-star"></div>
+                                <div class="page-3-price-box">
+                                    <span class="discount">$20.00 <div class="line"></div></span>$15.00
+                                </div>
+                                <div class="star-box">
+                                    <div class="page-3-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                                    <div class="page-3-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                                    <div class="page-3-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                                    <div class="page-3-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                                    <div class="page-3-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
                                 </div>
                             </div>
                         </div>
@@ -209,15 +217,17 @@
                         <img src="img/main/page-3-4.png" alt="" class="page-3-box-img">
                         <div class="page-3-product-text-box">
                             <p class="page-3-blue-p">Vegan Red Tomato</p>
-                            <div class="page-3-vertical-hr"></div>
+                            <div class="page-3-hr"></div>
                             <div class="page-3-rate-box">
-                                <div class="page-3-price-box"><span class="discount">$20.00 <div class="line"></div></span>$17.00</div>
-                                <div class="start-box">
-                                    <div class="page-3-star"></div>
-                                    <div class="page-3-star"></div>
-                                    <div class="page-3-star"></div>
-                                    <div class="page-3-star"></div>
-                                    <div class="page-3-star"></div>
+                                <div class="page-3-price-box">
+                                    <span class="discount">$20.00 <div class="line"></div></span>$17.00
+                                </div>
+                                <div class="star-box">
+                                    <div class="page-3-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                                    <div class="page-3-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                                    <div class="page-3-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                                    <div class="page-3-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                                    <div class="page-3-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
                                 </div>
                             </div>
                         </div>
@@ -227,15 +237,17 @@
                         <img src="img/main/page-3-5.png" alt="" class="page-3-box-img">
                         <div class="page-3-product-text-box">
                             <p class="page-3-blue-p">Mung Bean</p>
-                            <div class="page-3-vertical-hr"></div>
+                            <div class="page-3-hr"></div>
                             <div class="page-3-rate-box">
-                                <div class="page-3-price-box"><span class="discount">$20.00 <div class="line"></div></span>$11.00</div>
-                                <div class="start-box">
-                                    <div class="page-3-star"></div>
-                                    <div class="page-3-star"></div>
-                                    <div class="page-3-star"></div>
-                                    <div class="page-3-star"></div>
-                                    <div class="page-3-star"></div>
+                                <div class="page-3-price-box">
+                                    <span class="discount">$20.00 <div class="line"></div></span>$11.00
+                                </div>
+                                <div class="star-box">
+                                    <div class="page-3-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                                    <div class="page-3-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                                    <div class="page-3-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                                    <div class="page-3-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                                    <div class="page-3-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
                                 </div>
                             </div>
                         </div>
@@ -245,15 +257,17 @@
                         <img src="img/main/page-3-6.png" alt="" class="page-3-box-img">
                         <div class="page-3-product-text-box">
                             <p class="page-3-blue-p">Brown Hazelnut</p>
-                            <div class="page-3-vertical-hr"></div>
+                            <div class="page-3-hr"></div>
                             <div class="page-3-rate-box">
-                                <div class="page-3-price-box"><span class="discount">$20.00 <div class="line"></div></span>$12.00</div>
-                                <div class="start-box">
-                                    <div class="page-3-star"></div>
-                                    <div class="page-3-star"></div>
-                                    <div class="page-3-star"></div>
-                                    <div class="page-3-star"></div>
-                                    <div class="page-3-star"></div>
+                                <div class="page-3-price-box">
+                                    <span class="discount">$20.00 <div class="line"></div></span>$12.00
+                                </div>
+                                <div class="star-box">
+                                    <div class="page-3-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                                    <div class="page-3-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                                    <div class="page-3-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                                    <div class="page-3-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                                    <div class="page-3-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
                                 </div>
                             </div>
                         </div>
@@ -263,15 +277,17 @@
                         <img src="img/main/page-3-7.png" alt="" class="page-3-box-img">
                         <div class="page-3-product-text-box">
                             <p class="page-3-blue-p">Eggs</p>
-                            <div class="page-3-vertical-hr"></div>
+                            <div class="page-3-hr"></div>
                             <div class="page-3-rate-box">
-                                <div class="page-3-price-box"><span class="discount">$20.00 <div class="line"></div></span>$17.00</div>
-                                <div class="start-box">
-                                    <div class="page-3-star"></div>
-                                    <div class="page-3-star"></div>
-                                    <div class="page-3-star"></div>
-                                    <div class="page-3-star"></div>
-                                    <div class="page-3-star"></div>
+                                <div class="page-3-price-box">
+                                    <span class="discount">$20.00 <div class="line"></div></span>$17.00
+                                </div>
+                                <div class="star-box">
+                                    <div class="page-3-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                                    <div class="page-3-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                                    <div class="page-3-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                                    <div class="page-3-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                                    <div class="page-3-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
                                 </div>
                             </div>
                         </div>
@@ -281,15 +297,17 @@
                         <img src="img/main/page-3-8.png" alt="" class="page-3-box-img">
                         <div class="page-3-product-text-box">
                             <p class="page-3-blue-p">Zelco Suji Elaichi Rusk</p>
-                            <div class="page-3-vertical-hr"></div>
+                            <div class="page-3-hr"></div>
                             <div class="page-3-rate-box">
-                                <div class="page-3-price-box"><span class="discount">$20.00 <div class="line"></div></span>$15.00</div>
-                                <div class="start-box">
-                                    <div class="page-3-star"></div>
-                                    <div class="page-3-star"></div>
-                                    <div class="page-3-star"></div>
-                                    <div class="page-3-star"></div>
-                                    <div class="page-3-star"></div>
+                                <div class="page-3-price-box">
+                                    <span class="discount">$20.00 <div class="line"></div></span>$15.00
+                                </div>
+                                <div class="star-box">
+                                    <div class="page-3-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                                    <div class="page-3-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                                    <div class="page-3-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                                    <div class="page-3-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                                    <div class="page-3-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
                                 </div>
                             </div>
                         </div>    
