--- a/about_us.html
+++ b/about_us.html
@@ -140,6 +140,49 @@
                     </div>
                 </div>
                 
+                <div class="grid-container">
+                    <div class="grid-box">
+                        <div class="box1">
+                            <div class="icon-vegs">
+                                <img src="img/about_us/Return Purchase-icon.png" alt="">
+                            </div>
+                            <h5>Return Policy</h5>
+                            <p class="small-p">
+                                Simply dummy text of the printintypesetting industry.
+                            </p>
+                        </div>
+
+                        <div class="box2">
+                            <div class="icon-vegs">
+                                <img src="img/about_us/Natural Food-icon.png" alt="">
+                            </div>
+                            <h5>100% Fresh</h5>
+                            <p class="small-p">
+                                Simply dummy text of the printintypesetting industry.
+                            </p>
+                        </div>
+
+                        <div class="box3">
+                            <div class="icon-vegs">
+                                <img src="img/about_us/Phone Time-icon.png" alt="">
+                            </div>
+                            <h5>Support 24/7</h5>
+                            <p class="small-p">
+                                Simply dummy text of the printintypesetting industry.
+                            </p>
+                        </div>
+
+                        <div class="box4">
+                            <div class="icon-vegs">
+                                <img src="img/about_us/Card Security-icon.png" alt="">
+                            </div>
+                            <h5>Secured Payment</h5>
+                            <p class="small-p">
+                                Simply dummy text of the printintypesetting industry.
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
