--- a/change_log.html
+++ b/change_log.html
@@ -76,6 +76,19 @@
         </main>
         <footer class="default-site-footer">
             <div class="footer-container">
+                <!-- -------------------------footer subscribe form----------------------------------- -->
+                <div class="default-site-footer-box">
+                    <div class="footer-form-container">
+                        <div class="container-inner-box">
+                            <h1 class="footer-subscribe-text">Subscribe to <br> our Newsletter</h1>
+                        </div>
+                        <form class="footer-form">
+                            <input type="email" name="" id="" placeholder="Your Email Address" class="footer-form-input">
+                            <button type="button" class="footer-form-button">Subscribe</button>
+                        </form>
+                    </div>
+                </div>
+                <!-- ---------------------------end of subscribe form--------------------------------------------------- -->
     <!------------------------------- footer about site box ------------------------>
                 <div class="default-site-footer-box">
                     <div class="footer-content-box text-align-end">
