--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>404 Not Found</title>
     <link rel="stylesheet" href="css/style.css">
     <link 
     rel="stylesheet" 
@@ -67,6 +67,7 @@
         <!-- footer content -->
         <footer class="default-site-footer">
             <div class="footer-container">
+                <!------------------------------- footer about site box ------------------------>
                 <div class="default-site-footer-box">
                     <div class="footer-content-box text-align-end">
                         <h1 class="footer-h1">Contact Us</h1>
