--- a/password.html
+++ b/password.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Change Log</title>
+    <title>Protected-page</title>
     <link rel="stylesheet" href="css/style.css">
     <link 
     rel="stylesheet" 
@@ -60,20 +60,11 @@
         <div class="header-container">
         </div>
         </header>
+        <!--- main content --->
         <main>
-            <div class="img1">
-                <img src="img/change-log.svg" alt="">
-            </div>
-            <div class="change-log">
-                <img src="img/change-log-photo.svg" alt="">
-                <div class="txt">
-                    <h1>V.1</h1>
-                    <p>
-                        Initial Organick Webflow Template Release
-                    </p>
-                </div>
-            </div>
+
         </main>
+        <!-- footer content -->
         <footer class="default-site-footer">
             <div class="footer-container">
                 <!-- -------------------------footer subscribe form----------------------------------- -->
@@ -89,7 +80,7 @@
                     </div>
                 </div>
                 <!-- ---------------------------end of subscribe form--------------------------------------------------- -->
-    <!------------------------------- footer about site box ------------------------>
+                <!------------------------------- footer about site box ------------------------>
                 <div class="default-site-footer-box">
                     <div class="footer-content-box text-align-end">
                         <h1 class="footer-h1">Contact Us</h1>
