--- a/index.html
+++ b/index.html
@@ -62,7 +62,17 @@
         </header>
         <!--- main content --->
         <main>
-
+            <div class="not-found">
+                <img src="img/404-img.png" alt="">
+                <div class="text">
+                    <h1>404</h1>
+                    <h2>Page Not Found</h2>
+                    <p>The page you are looking for doesn't exist or has been moved</p>
+                    <button>
+                        Go to Homepage <img src="img/arrow.svg" alt="">
+                    </button>
+                </div>
+            </div>
         </main>
         <!-- footer content -->
         <footer class="default-site-footer">
