--- a/password.html
+++ b/password.html
@@ -62,7 +62,20 @@
         </header>
         <!--- main content --->
         <main>
-
+            <div class="main-container">
+                <div class="imgage-fon">
+                    <img src="img/protected.svg" alt="">
+                </div>
+                <div class="text1">
+                    <h3>Password</h3>
+                    <form action="" class="form">
+                        <input type="password" placeholder="Enter Your Password">
+                    </form>
+                    <button>
+                        Send Now <img src="img/arrow.svg" alt="">
+                    </button>
+                </div>
+            </div>
         </main>
         <!-- footer content -->
         <footer class="default-site-footer">
