img added to pasword protected file

--- a/password.html
+++ b/password.html
@@ -62,6 +62,7 @@
         </header>
         <!--- main content --->
         <main>
+        <img src="img/protected-page.svg" alt="">
             <div class="main-container">
                 <div class="imgage-fon">
                     <img src="img/protected.svg" alt="">
