--- a/Organick.html
+++ b/Organick.html
@@ -321,7 +321,70 @@
 
         <section class="page-4">
             <div class="page-4-body">
-
+                <div class="page-4-customer-box">
+                    <span class="page-4-italic-green">Testimonial</span>
+                    <h1 class="page-4-title">What Our Customer Saying?</h1>
+                    <div class="page-4-box-container">
+                        <div class="page-4-box">
+                            <img src="img/main/page-4-customer-img.jpg" alt="" class="page-4-customer-img">
+                            <div class="page-4-star-box">
+                                <div class="page-4-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                                <div class="page-4-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                                <div class="page-4-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                                <div class="page-4-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                                <div class="page-4-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                            </div>
+                            <p class="page-4-p font-size-18">Simply dummy text of the printing and typesetting industry. Lorem Ipsum simply dummy <br> text of the printing and typesetting industry. Lorem Ipsum has been.</p>
+                            <span class="page-4-customer-name">Sara Taylor</span>
+                            <p class="page-4-p">Consumer<p>
+                        </div>
+                        <div class="page-4-box page-4-selected-box">
+                            <img src="img/main/page-4-customer-img.jpg" alt="" class="page-4-customer-img">
+                            <div class="page-4-star-box">
+                                <div class="page-4-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                                <div class="page-4-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                                <div class="page-4-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                                <div class="page-4-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                                <div class="page-4-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                            </div>
+                            <p class="page-4-p font-size-18">Simply dummy text of the printing and typesetting industry. Lorem Ipsum simply dummy <br> text of the printing and typesetting industry. Lorem Ipsum has been.</p>
+                            <span class="page-4-customer-name">Sara Taylor</span>
+                            <p class="page-4-p">Consumer<p>
+                        </div>
+                        <div class="page-4-box">
+                            <img src="img/main/page-4-customer-img.jpg" alt="" class="page-4-customer-img">
+                            <div class="page-4-star-box">
+                                <div class="page-4-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                                <div class="page-4-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                                <div class="page-4-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                                <div class="page-4-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                                <div class="page-4-star"><img src="img/main/page-3-golden-star.png" alt=""></div>
+                            </div>
+                            <p class="page-4-p font-size-18">Simply dummy text of the printing and typesetting industry. Lorem Ipsum simply dummy <br> text of the printing and typesetting industry. Lorem Ipsum has been.</p>
+                            <span class="page-4-customer-name">Sara Taylor</span>
+                            <p class="page-4-p">Consumer<p>
+                        </div>
+                    </div>
+                </div>
+                <div class="page-4-hr"></div>
+                <div class="page-4-cycle-rate-box">
+                    <div class="page-4-rate-cycle">
+                        <h1 class="page-4-count">100%</h1>
+                        <span class="page-4-rate-name">Organic</span>
+                    </div>
+                    <div class="page-4-rate-cycle">
+                        <h1 class="page-4-count">285</h1>
+                        <span class="page-4-rate-name">Active Product</span>
+                    </div>
+                    <div class="page-4-rate-cycle">
+                        <h1 class="page-4-count">350+</h1>
+                        <span class="page-4-rate-name">Organic Orchads</span>
+                    </div>
+                    <div class="page-4-rate-cycle">
+                        <h1 class="page-4-count">25+</h1>
+                        <span class="page-4-rate-name">Years of Farming</span>
+                    </div>
+                </div>
             </div>
         </section>
 
